ros2_ws/log/build_2022-11-12_13-16-29/tx_control/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/minarady/ros2_ws/install/tx_control/lib/python3.10/site-packages/tx_control/subscriber_member_function.py", line 171
    rclpy.
          ^
SyntaxError: invalid syntax

